Update Bot Control v0.2.8

--- a/Bot Control v0.2.8
+++ b/Bot Control v0.2.8
@@ -1,8 +1,8 @@
 --Configuration
 getgenv().Use_Displayname = true -- if true, put accounts displayname for bots | if false use the username of accounts
-getgenv().bots = {"Red", "Purple", "Blue"} --bots
+getgenv().bots = {"Red", "Purple", "Blue", "Green", "Orange"} --bots
 getgenv().owner = "JokerMadBoss" --Owner (USER NAME, DO NOT PUT DISPLAYNAME)
-getgenv().nbbot = 3 -- Number of bots you want to use
+getgenv().nbbot = 5 -- Number of bots you want to use
 getgenv().prefix = ";" -- Prefix
 getgenv().botrender = true -- when true, bots use less CPU
 getgenv().printcmd = true -- if true, displays all commands available in the console
