--- a/Bot Control v0.2.8
+++ b/Bot Control v0.2.8
@@ -1,4 +1,3 @@
-
 --Configuration
 getgenv().Use_Displayname = true -- if true, put accounts displayname for bots | if false use the username of accounts
 getgenv().bots = {"Red", "Purple", "Blue", "Green", "Orange"} --bots
@@ -141,7 +140,7 @@ if printcmd then
   print(";tower [plr]                         | Bots stack into a tower")
   print(";untower                             | Dismantle the tower")
   print(";bridge [plr]                        | Bots form a bridge in front of a player")
-  print(";trampoline [plr]                    | Bots form a trampoline below the player")
+  print(";trampoline [plr] NOT MADE           | Bots form a trampoline below the player")
   print(";unbridge                            | Remove the bridge")
   print(";worm [plr]                          | Bots form a moving train/snake formation")
   print(";unworm                              | Stop the train formation")
@@ -170,7 +169,6 @@ if printcmd then
   print(";elevator [plr]                      | Bots create a rising platform under a player")
   print(";unelevator                          | Stop the elevator effect")
   print(";ladder [plr]                        | Bots create a ladder infront a player")
-  print(";trampoline [plr]                    | Bots create a trampoline under a player")
   print(";gojo [plr]                          | Bots perform the Hollow Purple sequence")
   -- Utility & Fix Commands
   print(";fix                                 | Attempt to fix a bot if glitched")
@@ -481,79 +479,12 @@ local function goto(targetPlayer)
   end
 end
 
---- ;trampoline
+-- ;trampoline
 local function trampoline(targetPlayer)
-  -- Stop any existing trampoline connection
-  if trampolineConnection then
-      trampolineConnection:Disconnect()
-      trampolineConnection = nil
-  end
 
-  if not targetPlayer or not targetPlayer.Character then
-      return nil
-  end
-
-  local targetHumanoidRootPart = targetPlayer.Character:FindFirstChild("HumanoidRootPart")
-  if not targetHumanoidRootPart then
-      return nil
-  end
-
-  -- Set trampoline boolean to true
-  trampolinebool = true
-  
-  -- Get the bot's index to determine position
-  local displayName = player.DisplayName
-  local botIndex = table.find(bots, displayName)
-
-  if not botIndex then 
-      return nil
-  end
-
-  -- Vertical positioning calculation
-  local verticalSpacing = 3  -- Space between bots vertically
-  local verticalOffset = (botIndex - 1) * verticalSpacing
-
-  -- Continuous positioning mechanism
-  trampolineConnection = RunService.Heartbeat:Connect(function()
-      -- Check if trampoline should continue
-      if not trampolinebool or not player or not player.Character then
-          if trampolineConnection then
-              trampolineConnection:Disconnect()
-              trampolineConnection = nil
-          end
-          return
-      end
-
-      local localHumanoidRootPart = player.Character:FindFirstChild("HumanoidRootPart")
-      local localHumanoid = player.Character:FindFirstChild("Humanoid")
-
-      if localHumanoidRootPart and targetHumanoidRootPart and localHumanoid then
-          -- Get target's current position
-          local targetCFrame = targetHumanoidRootPart.CFrame
-
-          -- Compute final position directly above the target
-          local desiredPosition = targetCFrame.Position + Vector3.new(0, verticalOffset, 0)
-
-          -- Create a CFrame that points upward
-          local rotatedCFrame = CFrame.new(desiredPosition) * CFrame.Angles(math.rad(90), 0, 0)
-
-          -- Set bot's CFrame vertically above the target
-          localHumanoidRootPart.CFrame = rotatedCFrame
-
-          -- Remove velocity to prevent drifting
-          removeVelocity()
-      else
-          -- Disconnect if target or bot is missing
-          if trampolineConnection then
-              trampolineConnection:Disconnect()
-              trampolineConnection = nil
-          end
-      end
-  end)
-
-  return trampolineConnection
 end
 
+-- ;ladder
 local function ladder(targetPlayer)
   -- Stop any existing ladder connection
   if ladderConnection then
@@ -1794,7 +1725,7 @@ local function connectChatListener(playerpower)
             chatMessage(";orbit6 [plr] <radius> <speed> ;unorbit ;goto [plr] ;ws <number> ;loopjump ;unloopjump ;circle <number> ;channel <number>")
             chatMessage(";worm [plr] ;unworm ;spin <number> ;unspin ;admin [plr] ;arch <number> ;stalk [plr] ;unstalk ;cmds ;firework")
             chatMessage(";elevator [plr] ;gojo [plr] ;explode [plr] ;fling [plr] ;bridge [plr] ;nuke [plr] ;gravity <number> ;sit ;unsit")
-            chatMessage(";ladder (plr) :trampoline (plr)")
+            chatMessage(";ladder (plr)")
         end
         wait(2)
 
