--- a/Bot Control v0.2.9
+++ b/Bot Control v0.2.9
@@ -77,6 +77,8 @@ local cmdragdoll = true
 local cmdunragdoll = true
 local cmdquake = true
 local cmdunquake = true
+local cmdsword = true
+local cmdunsword = true
 
 local towerbool = nil
 local followbool = nil
@@ -108,6 +110,8 @@ local ladderConnection = nil
 local minebool = nil
 local quakebool = false
 local quakeConnection = nil
+local swordbool = nil
+local swordConnection = nil
 local Admins = {}
 
 --version of the script
@@ -178,7 +182,10 @@ if printcmd then
   print(";unelevator                          | Stop the elevator effect")
   print(";ladder [plr]                        | Bots create a ladder infront a player")
   print(";gojo [plr]                          | Bots perform the Hollow Purple sequence")
-  print(";quake [plr]                         | Bots ")
+  print(";quake [plr] <radius>                | Bots teleport randomly within a radius")
+  print(";unquake                             | Bots unquake")
+  print(";sword [plr]                         | Bots sword towards a player")
+  print(";unsword                             | Stop bots from swording")
   -- Utility & Fix Commands
   print(";fix                                 | Attempt to fix a bot if glitched")
   print("-------------------------------------------------------------------")
@@ -1191,7 +1198,89 @@ local function unelevator()
   elevatorbool = false
 end
 
---- ;bridge
+-- ;sword
+local function sword(targetPlayer)
+  -- Stop any existing sword connection
+  if swordConnection then
+      swordConnection:Disconnect()
+      swordConnection = nil
+  end
+
+  if not targetPlayer or not targetPlayer.Character then
+      return nil
+  end
+
+  local targetHumanoidRootPart = targetPlayer.Character:FindFirstChild("HumanoidRootPart")
+  if not targetHumanoidRootPart then
+      return nil
+  end
+
+  -- Set sword boolean to true
+  swordbool = true
+  
+  -- Get the bot's index to determine position
+  local displayName = player.DisplayName
+  local botIndex = table.find(bots, displayName)
+
+  if not botIndex then 
+      return nil
+  end
+
+  -- Dynamic forward distance calculation
+  local baseForwardDistance = 2 -- Starting distance
+  local forwardDistance = baseForwardDistance * (botIndex * 2)  -- Increases by 3 for each bot
+
+  -- Continuous positioning mechanism
+  swordConnection = RunService.Heartbeat:Connect(function()
+      -- Check if sword should continue
+      if not swordbool or not player or not player.Character then
+          if swordConnection then
+              swordConnection:Disconnect()
+              swordConnection = nil
+          end
+          return
+      end
+
+      local localHumanoidRootPart = player.Character:FindFirstChild("HumanoidRootPart")
+      local localHumanoid = player.Character:FindFirstChild("Humanoid")
+
+      if localHumanoidRootPart and targetHumanoidRootPart and localHumanoid then
+          -- Get target's current position and rotation
+          local targetCFrame = targetHumanoidRootPart.CFrame
+
+          -- Calculate forward vector
+          local forwardVector = targetCFrame.LookVector * forwardDistance
+
+          -- Compute final position
+          local desiredPosition = targetCFrame.Position + forwardVector
+
+          -- Rotate 90 degrees to make the bot's face point towards the sky
+          local rotatedCFrame = CFrame.lookAt(desiredPosition, targetCFrame.Position) * CFrame.Angles(math.rad(90), 0, 0)
+
+          -- Set bot's CFrame to always face the target player but rotated upward
+          localHumanoidRootPart.CFrame = rotatedCFrame
+
+          -- Add velocity towards the target
+          local velocityDirection = (targetHumanoidRootPart.Position - localHumanoidRootPart.Position).Unit
+          local velocityMagnitude = -100  -- Adjust this value to control speed
+          
+          localHumanoidRootPart.Velocity = velocityDirection * velocityMagnitude
+          
+          -- Optional: Add some vertical velocity
+          localHumanoidRootPart.Velocity = localHumanoidRootPart.Velocity + Vector3.new(0, -100, 0)
+      else
+          -- Disconnect if target or bot is missing
+          if swordConnection then
+              swordConnection:Disconnect()
+              swordConnection = nil
+          end
+      end
+  end)
+
+  return swordConnection
+end
+
+-- ;bridge
 local function bridge(targetPlayer)
   -- Stop any existing bridge connection
   if bridgeConnection then
@@ -1811,6 +1900,9 @@ local function connectChatListener(playerpower)
             cmdunragdoll = false
             cmdquake = false
             quakebool = false
+            cmdsword = false
+            cmdunsword = false
+            swordbool = false
             Admins = {}
             adminNotConnected = {}
             chatMessage("Ended Script.")
@@ -2012,29 +2104,61 @@ local function connectChatListener(playerpower)
           end
           wait(2)
 
-      elseif command:sub(1, 6) == "bridge" and table.find(bots, displayName) and cmdbridge then
-        disablebool()
-        local targetName = command:sub(8)
-        local targetPlayer = findPlayerByName(targetName)
-        
-        if targetPlayer then
-            bridge(targetPlayer)
-            if index == channel then
-                chatMessage("Bridging to " .. targetPlayer.Name)
-            end
-        else
-            if index == channel then
-                chatMessage("Player not found for bridging.")
-            end
-        end
-        wait(2)
+        elseif command:sub(1, 5) == "sword" and table.find(bots, displayName) and cmdsword then
+          disablebool()
+          local targetName = command:sub(7)
+          local targetPlayer = findPlayerByName(targetName)
+          
+          if targetPlayer then
+              if index == channel then
+                  chatMessage("Swording to " .. targetPlayer.Name)
+              end
+              sword(targetPlayer)
+              wait(2)
+          else
+              if index == channel then
+                  chatMessage("Player not found for swording.")
+              end
+          end
+      
+        elseif command:sub(1, 7) == "unsword" and table.find(bots, displayName) then
+          swordbool = false
+          if swordConnection then
+              swordConnection:Disconnect()
+              swordConnection = nil
+          end
+          if index == channel then
+              chatMessage("Unsworded")
+          end
+          wait(2)
 
-      elseif command:sub(1, 7) == "unbridge" and table.find(bots, displayName) and cmdunbridge then
-        bridgebool = false
-        if index == channel then
-          chatMessage("Unbridged")
-        end
-        wait(2)
+        elseif command:sub(1, 6) == "bridge" and table.find(bots, displayName) and cmdbridge then
+          disablebool()
+          local targetName = command:sub(8)
+          local targetPlayer = findPlayerByName(targetName)
+          
+          if targetPlayer then
+              if index == channel then
+                  chatMessage("Bridging to " .. targetPlayer.Name)
+              end
+              bridge(targetPlayer)
+              wait(2)
+          else
+              if index == channel then
+                  chatMessage("Player not found for bridging.")
+              end
+          end
+      
+        elseif command:sub(1, 8) == "unbridge" and table.find(bots, displayName) then
+          bridgebool = false
+          if bridgeConnection then
+              bridgeConnection:Disconnect()
+              bridgeConnection = nil
+          end
+          if index == channel then
+              chatMessage("Unbridged")
+          end
+          wait(2)
 
       elseif command:sub(1, 5) == "mine " and table.find(bots, displayName) and cmdmine then
         disablebool()
